# cpp-skeleton

./: .gitignore  Makefile.am  README.md  configure.ac  identityd
build-aux/m4/: ax_boost_base.m4  ax_boost_unit_test_framework.m4  ax_gnu_autotest.m4
common/: Makefile.am  config.h.in  init.cpp  init.h  system.cpp  system.h
contrib/: reset.sh
contrib/pyskeleton/: README.md
contrib/pyskeleton/skeleton/: rpcerror.py  skeleton.py  unixdomainsocketrpc.py
src/: Makefile.am  server.cpp
src/client/: client.cpp  client.hpp  main.cpp
src/client/test/: client_tests.cpp
src/common/: argsmanager.cpp  argsmanager.hpp  error.cpp  system.cpp  system.hpp
src/config/: config.h.in
src/myproject/: greeter.cpp  greeter.hpp  main.cpp
src/myproject/.deps/: main.Po
src/myproject/test/: greeter_tests.cpp  main_tests.cpp
src/server/: main.cpp  server.cpp  server.hpp
src/server/test/: server_tests.cpp
src/test/: Makefile.am  test_server.cpp  test_server_bind.cpp
test/: README  run_tests.py
test/integration/: server_testsuite.py  testrunner.py
test/unit/client/: client_tests.cpp
test/unit/server/: server_tests.cpp
