AM_CPPFLAGS = $(BOOST_CPPFLAGS) -DBOOST_TEST_DYN_LINK
AM_LDFLAGS = $(BOOST_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)
LDADD = $(BOOST_SYSTEM_LIB) $(BOOST_UNIT_TEST_FRAMEWORK_LIB)

check_PROGRAMS = test_server
test_server_CPPFLAGS = -I../src/ $(AM_CPPFLAGS)
test_server_LDFLAGS = $(AM_LDFLAGS)
test_server_LDADD = $(LDADD)
test_server_SOURCES = \
    test_server.cpp \
    test_server_bind.cpp

CC = g++

TESTS = $(check_PROGRAMS)

EXTRA_DIST = $(TESTS)
